--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="margin:auto 5vw;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
