--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,9 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Boba-BAE</title>
   </head>
-  <body style="margin:auto 5vw;">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
